Update DisplayWindow.java
Co-authored-by: Paint_Ninja <PaintNinja@users.noreply.github.com>